# scovox

./: .dockerignore  .gitignore  LICENSE  NOTICE  README.md  compose.yaml
config/: explo_experiment.rviz  explo_experiment_dscovox.rviz  exploration_fused_bag.yaml  scovox_fused_lidar_rgbd.yaml  scovox_lidar_geometric.yaml  scovox_robot_share.yaml
config/glim/: scovox_lidar_glim.yaml  scovox_lidar_raw_control.yaml  scovox_lidar_raw_deskew.yaml  scovox_lidar_raw_nodeskew.yaml
docker/: Dockerfile  build_and_test.sh
docs/: METHODS.md  NEW_EXPERIMENT_PLAN.md  STEP8_EXPERIMENT_RESULTS_2026_05_14.md  code-review-2026-06-23.md  distributed_mapping.md  distributed_mapping_lidar.md  dscovox_multi_robot_run.md  dscovox_single_robot_run.md  jetbot_experiment_2026_05_21.md  map accuracy results.md  occupancy_prior.md  publish_scovox_bin_from_bag.md  scovox_bin_manual_bringup.md  single_robot_lidar.md
docs/design/: occupancy_prior.md
experiments/: RESULTS.md  UNCERTAINTY_PLAN.md  batch_scenenet_ablation.sh  batch_scenenet_gt.sh  batch_scenenet_soft.sh  build_scenenet_ablation_table.py  build_soft_vs_gt_table.py  full_soft_pipeline.sh  rebuild_scenenet_summaries.py  run_all_ablation.sh  run_scenenet_gt.sh  run_scenenet_smoke.sh  run_scenenet_soft.sh  run_scenenet_soft_mode.sh
experiments/fusion/: batch_scenenet_fusion.sh  build_fusion_table.py  run_scenenet_fusion.sh
experiments/kitti/: batch_ablation.sh  batch_gt.sh  batch_polarseg.sh  build_ablation_table.py  build_gt.py  build_kitti_table.py  run_all_kitti.sh  run_kitti.sh  run_polarseg_inference.sh  score_kitti.py
experiments/paper_docs/design/: unified_dirichlet_design_2026_05_13.md
experiments/scovox_eval/jetbot/: README.md
experiments/scovox_eval/scovox_eval/: mesh_extract.py  render_pointcloud_frames.py  render_qualitative_compare.py  replica_replay_node.py  scenenet_replay_node.py  scovox_bin_capture.py  semantickitti_replay_node.py
experiments/scovox_eval/scripts/: ade150_labels.json  analyse_fusion_overlap.py  b6_full_flip_simulation.py  build_ade_collapse_map.py  collapse_ade150_to_scovox18.json  compare_preview.py  download_replica_v1.sh  eval_e21_fusion.py  eval_e32_component.py  eval_replica_head2head.py  eval_scovox_kitti_miou.py  eval_slimvdb_kitti_miou.py  eval_slimvdb_runtime_memory.py  exp7_unknown_vs_ambiguous.py  extract_run_stats.py  flatforest_calibration.py  flatforest_create_dataset.sh  flatforest_gt_query.sh  gz_gt_to_npz.py  npz_to_query_csv.py  phase1_kitti_soft_sweep.sh  phase2_5_v2_admission_gate_sweep.sh  plot_f1_ktop_pareto.py  plot_f2_head_to_head.py  plot_kitti_precision_vs_memory.py  prepare_record_sdf.py  render_replica_dataset.py  render_replica_semantic.py  (+41 more)
experiments/soft_scenenet/: ade150_to_scenenet14.json  build_ade150_to_scenenet14.py  run_mask2former_scenenet.py
experiments/uncertainty/: build_e1_table.py  build_e1_table_scenenet.py  build_occ_reference.py  build_occ_reference_scenenet.py  functionals.py  run_all_e1.sh  run_all_scenenet_e1.sh  run_kitti_e1.sh  run_scenenet_e1.sh  score_e1.py  scovox_bin.py  selftest.py
scripts/: launch_scovox.sh
scripts/glim/: launch_scovox.sh
src/scovox_core/: CMakeLists.txt  package.xml
src/scovox_core/include/scovox/: beta_voxel.hpp  binary_serializer.hpp  binary_serializer_v2.hpp  binary_serializer_v3.hpp  binary_serializer_v4.hpp  consensus_merge.hpp  consensus_merge_v2.hpp  consensus_merge_v3.hpp  consensus_merge_v4.hpp  dir_voxel.hpp  lz4_codec.hpp  map_interface.hpp  marching_cubes.hpp  mesh_labelling.hpp  ray_iterator.hpp  scovox_map_split.hpp  sem_split_map.hpp  semantics.hpp  sembeta_map.hpp  sembeta_voxel.hpp  semdir_map.hpp  semdir_voxel.hpp  tsdf_map.hpp  tsdf_voxel.hpp  uncertainty.hpp  version.hpp  voxel.hpp
src/scovox_core/src/: sem_split_map.cpp  sembeta_map.cpp  semdir_map.cpp  tsdf_map.cpp  uncertainty.cpp
src/scovox_core/test/: test_binary_serializer.cpp  test_binary_serializer_v2.cpp  test_binary_serializer_v3.cpp  test_binary_serializer_v4.cpp  test_consensus_merge.cpp  test_consensus_merge_v2.cpp  test_consensus_merge_v3.cpp  test_consensus_merge_v4.cpp  test_mesh_labelling.cpp  test_scovox_map_split.cpp  test_sem_split_map.cpp  test_sembeta_map.cpp  test_semdir_map.cpp  test_sparse_add.cpp  test_tsdf_map.cpp  test_uncertainty.cpp  test_voxel_layouts.cpp
src/scovox_core/tools/: split_memory_demo.cpp
src/scovox_eval/: setup.py
src/scovox_mapping/: CMakeLists.txt  package.xml
src/scovox_mapping/config/: default_params.yaml  dscovox_params.yaml  lidar_mapping.yaml  rgbd_semantic_mapping.yaml  scovox_bin_min.yaml  scovox_bin_smoketest.rviz
src/scovox_mapping/include/scovox/: dscovox_consensus.hpp  node_utils.hpp  scovoxmap.hpp  topk_provider.hpp
src/scovox_mapping/launch/: dscovox.launch.py  dscovox_multi_robot.launch.py  dscovox_single_robot.launch.py  flatforest_eval.launch.py  lidar_mapping.launch.py  replica_eval.launch.py  replica_eval_covox.launch.py  replica_eval_fusion.launch.py  replica_eval_scovox_mv.launch.py  replica_eval_scovox_np.launch.py  rgbd_semantic_mapping.launch.py  scenenet_eval.launch.py  scenenet_eval_fusion.launch.py  scenenet_jetbot.launch.py  scovox_multi_robot.launch.py  scovox_single_robot.launch.py  semantickitti_eval.launch.py
src/scovox_mapping/src/: dscovox_node.cpp  scovox_node.cpp  scovoxmap.cpp
src/scovox_mapping/test/: test_beta_update.cpp  test_consensus.cpp  test_dirichlet_update.cpp  test_marching_cubes.cpp  test_semantic_audit.cpp  test_topk_provider.cpp  test_tsdf_band.cpp
src/scovox_msgs/: CMakeLists.txt  package.xml
src/scovox_msgs/msg/: CandidatePose.msg  MapStats.msg  RobotIntent.msg  ScovoxMap.msg  ScovoxMapBinary.msg  ScovoxSemanticEvidence.msg  ScovoxVoxel.msg  TreeTarget.msg
src/scovox_msgs/srv/: ExtractMesh.srv  GetOccupancyGrid.srv  GetRegion.srv  ScoreCandidates.srv
src/seg_pipeline/: .gitignore  COLCON_IGNORE  Dockerfile  README.md  compose.yaml  package.xml  run_seg.sh  seg_node.py  setup.cfg  setup.py
src/seg_pipeline/config/: seg_fused_experiment.yaml
src/seg_pipeline/seg_pipeline/: outdoor_palette.py  seg_node.py
(+81 files in other folders)
